5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_1806.log
== SUBMITION (2019-04-02 00:44:58) 
-- CODE:
n = int(input("Número de pessoas"))
pn = 1 - (Factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- EXECUTION TIME:
0.29792
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = 1 - (Factorial(365) / factorial(365 - n)) * (1/(365**n))
NameError: name 'Factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:45:54) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- EXECUTION TIME:
0.183411
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:45:55) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:45:58) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- EXECUTION TIME:
0.162626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:46:04) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:46:52) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = (1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- EXECUTION TIME:
0.165935
-- ERROR:
  File "/home/codebench/codes/1593/1806/main.py", line 3
    print(round(pn*100, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:46:53) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = (1 - (factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- ERROR:
File "XXXX", line 3
    print(round(pn*100, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:47:02) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - ((factorial(365) / factorial(365 - n)) * (1/(365**n))
print(round(pn*100, 2))
-- EXECUTION TIME:
0.126614
-- ERROR:
  File "/home/codebench/codes/1593/1806/main.py", line 3
    print(round(pn*100, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:48:36) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
print(round(pn*100, 2))
-- EXECUTION TIME:
0.192013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:48:37) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
print(round(pn*100, 2))
-- EXECUTION TIME:
0.151142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:48:38) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
print(round(pn*100, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:49:15) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
print(round(pn*100, 2))
-- EXECUTION TIME:
0.214022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = 1 - (( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:49:20) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = (1 - ( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
print(round(pn*100, 2))
-- EXECUTION TIME:
0.142269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = (1 - ( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:49:21) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = (1 - ( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
print(round(pn*100, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pn = (1 - ( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:49:26) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = (1 - ( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
print(round(pn*100, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pn = (1 - ( factorial (365) / factorial (365 - n) ) * ( 1/(365**n) ))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:51:06) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
print(round(pn*100, 2))
-- EXECUTION TIME:
0.207354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:51:07) 
-- CODE:
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
print(round(pn*100, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 00:54:39) 
-- CODE:
from math import *
n = int(input("Número de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
print(round(pn*100, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 00:55:11) 
-- CODE:
from math import *
n = int(input("Numero de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
print(round(pn*100, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 00:55:17) 
-- CODE:
from math import *
n = int(input("Numero de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
print(round(pn*100, 2))
-- EXECUTION TIME:
0.122929
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 00:55:36) 
-- CODE:
from math import *
n = int(input("Numero de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
print(round(pn*100, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 00:55:39) 
-- CODE:
from math import *
n = int(input("Numero de pessoas: "))
pn = 1 - (factorial(365) / factorial(365 - n) * (1/365**n) )
print(round(pn*100, 2))
-- EXECUTION TIME:
0.16104
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:57:12) 
-- CODE:
# Modulo math
from math import *
# Entradas
np = int(input("Determine: "))
# Variavel
prob = 1 - (factorial(365) / factorial(365-np)) * (1 / 365**np)
# Saida
print(round(prob*100, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:57:20) 
-- CODE:
# Modulo math
from math import *
# Entradas
np = int(input("Determine: "))
# Variavel
prob = 1 - (factorial(365) / factorial(365-np)) * (1 / 365**np)
# Saida
print(round(prob*100, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:57:26) 
-- CODE:
# Modulo math
from math import *
# Entradas
np = int(input("Determine: "))
# Variavel
prob = 1 - (factorial(365) / factorial(365-np)) * (1 / 365**np)
# Saida
print(round(prob*100, 2))
-- EXECUTION TIME:
0.18662
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
